Изменил эндпоинт получения юзеров по роли
